// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`calculate comparateur-statuts > ACRE 1`] = `
"dirigeant . rémunération . net: 44208
dirigeant . rémunération . net . après impôt: 44178
entreprise . coût formalités . création: 0
protection sociale . invalidité et décès . accidents du travail et maladies professionnelles . rente décès: null
protection sociale . invalidité et décès . accidents du travail et maladies professionnelles . rente incapacité: null
protection sociale . invalidité et décès . capital décès: 9612
protection sociale . invalidité et décès . capital décès . orphelin: 200
protection sociale . invalidité et décès . pension de reversion: 392
protection sociale . invalidité et décès . pension invalidité . invalidité partielle: 487
protection sociale . invalidité et décès . pension invalidité . invalidité totale: 725
protection sociale . maladie . accidents du travail et maladies professionnelles . indemmnités: null
protection sociale . maladie . accidents du travail et maladies professionnelles . indemmnités . à partir du 29ème jour: null
protection sociale . maladie . arrêt maladie: 24
protection sociale . maladie . maternité paternité adoption: 66
protection sociale . maladie . maternité paternité adoption . allocation forfaitaire de repos adoption: 2003
protection sociale . maladie . maternité paternité adoption . allocation forfaitaire de repos maternel: 4005
protection sociale . retraite . base . cotisée: 17400
protection sociale . retraite . complémentaire . points acquis: 67
protection sociale . retraite . trimestres: 4

Notifications affichées : dirigeant . auto-entrepreneur . Acre . notification calcul ACRE annuel"
`;

exports[`calculate comparateur-statuts > ACRE 2`] = `
"dirigeant . rémunération . net: 34599
dirigeant . rémunération . net . après impôt: 30725
entreprise . coût formalités . création: 0
protection sociale . invalidité et décès . accidents du travail et maladies professionnelles . rente décès: null
protection sociale . invalidité et décès . accidents du travail et maladies professionnelles . rente incapacité: null
protection sociale . invalidité et décès . capital décès: 9612
protection sociale . invalidité et décès . capital décès . orphelin: 200
protection sociale . invalidité et décès . pension de reversion: 808
protection sociale . invalidité et décès . pension invalidité . invalidité partielle: 897
protection sociale . invalidité et décès . pension invalidité . invalidité totale: 1496
protection sociale . maladie . accidents du travail et maladies professionnelles . indemmnités: null
protection sociale . maladie . accidents du travail et maladies professionnelles . indemmnités . à partir du 29ème jour: null
protection sociale . maladie . arrêt maladie: 49
protection sociale . maladie . maternité paternité adoption: 66
protection sociale . maladie . maternité paternité adoption . allocation forfaitaire de repos adoption: 2003
protection sociale . maladie . maternité paternité adoption . allocation forfaitaire de repos maternel: 4005
protection sociale . retraite . base . cotisée: 35899
protection sociale . retraite . complémentaire . points acquis: 116
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate comparateur-statuts > ACRE 3`] = `
"dirigeant . rémunération . net: 30747
dirigeant . rémunération . net . après impôt: 28814
entreprise . coût formalités . création: 191
protection sociale . invalidité et décès . accidents du travail et maladies professionnelles . rente décès: 1198
protection sociale . invalidité et décès . accidents du travail et maladies professionnelles . rente incapacité: 748
protection sociale . invalidité et décès . capital décès: 3681
protection sociale . invalidité et décès . capital décès . orphelin: null
protection sociale . invalidité et décès . pension de reversion: 808
protection sociale . invalidité et décès . pension invalidité . invalidité partielle: 898
protection sociale . invalidité et décès . pension invalidité . invalidité totale: 1497
protection sociale . maladie . accidents du travail et maladies professionnelles . indemmnités: 47
protection sociale . maladie . accidents du travail et maladies professionnelles . indemmnités . à partir du 29ème jour: 62
protection sociale . maladie . arrêt maladie: 42
protection sociale . maladie . maternité paternité adoption: 78
protection sociale . maladie . maternité paternité adoption . allocation forfaitaire de repos adoption: null
protection sociale . maladie . maternité paternité adoption . allocation forfaitaire de repos maternel: null
protection sociale . retraite . base . cotisée: 2994
protection sociale . retraite . complémentaire . points acquis: 110
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate comparateur-statuts > EI à l'IS 1`] = `
"dirigeant . rémunération . net: 27641
dirigeant . rémunération . net . après impôt: 26261
entreprise . coût formalités . création: 0
protection sociale . invalidité et décès . accidents du travail et maladies professionnelles . rente décès: null
protection sociale . invalidité et décès . accidents du travail et maladies professionnelles . rente incapacité: null
protection sociale . invalidité et décès . capital décès: 9612
protection sociale . invalidité et décès . capital décès . orphelin: 200
protection sociale . invalidité et décès . pension de reversion: 646
protection sociale . invalidité et décès . pension invalidité . invalidité partielle: 718
protection sociale . invalidité et décès . pension invalidité . invalidité totale: 1197
protection sociale . maladie . accidents du travail et maladies professionnelles . indemmnités: null
protection sociale . maladie . accidents du travail et maladies professionnelles . indemmnités . à partir du 29ème jour: null
protection sociale . maladie . arrêt maladie: 39
protection sociale . maladie . maternité paternité adoption: 66
protection sociale . maladie . maternité paternité adoption . allocation forfaitaire de repos adoption: 2003
protection sociale . maladie . maternité paternité adoption . allocation forfaitaire de repos maternel: 4005
protection sociale . retraite . base . cotisée: 28721
protection sociale . retraite . complémentaire . points acquis: 93
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate comparateur-statuts > bas revenus 1`] = `
"dirigeant . rémunération . net: 1746
dirigeant . rémunération . net . après impôt: 1746
entreprise . coût formalités . création: 0
protection sociale . invalidité et décès . accidents du travail et maladies professionnelles . rente décès: null
protection sociale . invalidité et décès . accidents du travail et maladies professionnelles . rente incapacité: null
protection sociale . invalidité et décès . capital décès: null
protection sociale . invalidité et décès . capital décès . orphelin: null
protection sociale . invalidité et décès . pension de reversion: 306
protection sociale . invalidité et décès . pension invalidité . invalidité partielle: 0
protection sociale . invalidité et décès . pension invalidité . invalidité totale: 0
protection sociale . maladie . accidents du travail et maladies professionnelles . indemmnités: null
protection sociale . maladie . accidents du travail et maladies professionnelles . indemmnités . à partir du 29ème jour: null
protection sociale . maladie . arrêt maladie: 0
protection sociale . maladie . maternité paternité adoption: 7
protection sociale . maladie . maternité paternité adoption . allocation forfaitaire de repos adoption: 200
protection sociale . maladie . maternité paternité adoption . allocation forfaitaire de repos maternel: 401
protection sociale . retraite . base . cotisée: 580
protection sociale . retraite . complémentaire . points acquis: 2
protection sociale . retraite . trimestres: 0"
`;

exports[`calculate comparateur-statuts > bas revenus 2`] = `
"dirigeant . rémunération . net: 540
dirigeant . rémunération . net . après impôt: 540
entreprise . coût formalités . création: 0
protection sociale . invalidité et décès . accidents du travail et maladies professionnelles . rente décès: null
protection sociale . invalidité et décès . accidents du travail et maladies professionnelles . rente incapacité: null
protection sociale . invalidité et décès . capital décès: 9612
protection sociale . invalidité et décès . capital décès . orphelin: 200
protection sociale . invalidité et décès . pension de reversion: 306
protection sociale . invalidité et décès . pension invalidité . invalidité partielle: 487
protection sociale . invalidité et décès . pension invalidité . invalidité totale: 686
protection sociale . maladie . accidents du travail et maladies professionnelles . indemmnités: null
protection sociale . maladie . accidents du travail et maladies professionnelles . indemmnités . à partir du 29ème jour: null
protection sociale . maladie . arrêt maladie: 26
protection sociale . maladie . maternité paternité adoption: 66
protection sociale . maladie . maternité paternité adoption . allocation forfaitaire de repos adoption: 2003
protection sociale . maladie . maternité paternité adoption . allocation forfaitaire de repos maternel: 4005
protection sociale . retraite . base . cotisée: 5408
protection sociale . retraite . complémentaire . points acquis: 2
protection sociale . retraite . trimestres: 2"
`;

exports[`calculate comparateur-statuts > bas revenus 3`] = `
"dirigeant . rémunération . net: 722
dirigeant . rémunération . net . après impôt: 722
entreprise . coût formalités . création: 191
protection sociale . invalidité et décès . accidents du travail et maladies professionnelles . rente décès: 42
protection sociale . invalidité et décès . accidents du travail et maladies professionnelles . rente incapacité: 26
protection sociale . invalidité et décès . capital décès: 3681
protection sociale . invalidité et décès . capital décès . orphelin: null
protection sociale . invalidité et décès . pension de reversion: 306
protection sociale . invalidité et décès . pension invalidité . invalidité partielle: 31
protection sociale . invalidité et décès . pension invalidité . invalidité totale: 52
protection sociale . maladie . accidents du travail et maladies professionnelles . indemmnités: 2
protection sociale . maladie . accidents du travail et maladies professionnelles . indemmnités . à partir du 29ème jour: 2
protection sociale . maladie . arrêt maladie: 0
protection sociale . maladie . maternité paternité adoption: 0
protection sociale . maladie . maternité paternité adoption . allocation forfaitaire de repos adoption: null
protection sociale . maladie . maternité paternité adoption . allocation forfaitaire de repos maternel: null
protection sociale . retraite . base . cotisée: 104
protection sociale . retraite . complémentaire . points acquis: 4
protection sociale . retraite . trimestres: 0"
`;

exports[`calculate comparateur-statuts > base 1`] = `
"dirigeant . rémunération . net: 40548
dirigeant . rémunération . net . après impôt: 40518
entreprise . coût formalités . création: 0
protection sociale . invalidité et décès . accidents du travail et maladies professionnelles . rente décès: null
protection sociale . invalidité et décès . accidents du travail et maladies professionnelles . rente incapacité: null
protection sociale . invalidité et décès . capital décès: 9612
protection sociale . invalidité et décès . capital décès . orphelin: 200
protection sociale . invalidité et décès . pension de reversion: 392
protection sociale . invalidité et décès . pension invalidité . invalidité partielle: 487
protection sociale . invalidité et décès . pension invalidité . invalidité totale: 725
protection sociale . maladie . accidents du travail et maladies professionnelles . indemmnités: null
protection sociale . maladie . accidents du travail et maladies professionnelles . indemmnités . à partir du 29ème jour: null
protection sociale . maladie . arrêt maladie: 24
protection sociale . maladie . maternité paternité adoption: 66
protection sociale . maladie . maternité paternité adoption . allocation forfaitaire de repos adoption: 2003
protection sociale . maladie . maternité paternité adoption . allocation forfaitaire de repos maternel: 4005
protection sociale . retraite . base . cotisée: 17400
protection sociale . retraite . complémentaire . points acquis: 67
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate comparateur-statuts > base 2`] = `
"dirigeant . rémunération . net: 33008
dirigeant . rémunération . net . après impôt: 29611
entreprise . coût formalités . création: 0
protection sociale . invalidité et décès . accidents du travail et maladies professionnelles . rente décès: null
protection sociale . invalidité et décès . accidents du travail et maladies professionnelles . rente incapacité: null
protection sociale . invalidité et décès . capital décès: 9612
protection sociale . invalidité et décès . capital décès . orphelin: 200
protection sociale . invalidité et décès . pension de reversion: 772
protection sociale . invalidité et décès . pension invalidité . invalidité partielle: 858
protection sociale . invalidité et décès . pension invalidité . invalidité totale: 1430
protection sociale . maladie . accidents du travail et maladies professionnelles . indemmnités: null
protection sociale . maladie . accidents du travail et maladies professionnelles . indemmnités . à partir du 29ème jour: null
protection sociale . maladie . arrêt maladie: 47
protection sociale . maladie . maternité paternité adoption: 66
protection sociale . maladie . maternité paternité adoption . allocation forfaitaire de repos adoption: 2003
protection sociale . maladie . maternité paternité adoption . allocation forfaitaire de repos maternel: 4005
protection sociale . retraite . base . cotisée: 34310
protection sociale . retraite . complémentaire . points acquis: 111
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate comparateur-statuts > base 3`] = `
"dirigeant . rémunération . net: 26660
dirigeant . rémunération . net . après impôt: 25326
entreprise . coût formalités . création: 191
protection sociale . invalidité et décès . accidents du travail et maladies professionnelles . rente décès: 1136
protection sociale . invalidité et décès . accidents du travail et maladies professionnelles . rente incapacité: 710
protection sociale . invalidité et décès . capital décès: 3681
protection sociale . invalidité et décès . capital décès . orphelin: null
protection sociale . invalidité et décès . pension de reversion: 767
protection sociale . invalidité et décès . pension invalidité . invalidité partielle: 852
protection sociale . invalidité et décès . pension invalidité . invalidité totale: 1420
protection sociale . maladie . accidents du travail et maladies professionnelles . indemmnités: 44
protection sociale . maladie . accidents du travail et maladies professionnelles . indemmnités . à partir du 29ème jour: 59
protection sociale . maladie . arrêt maladie: 42
protection sociale . maladie . maternité paternité adoption: 74
protection sociale . maladie . maternité paternité adoption . allocation forfaitaire de repos adoption: null
protection sociale . maladie . maternité paternité adoption . allocation forfaitaire de repos maternel: null
protection sociale . retraite . base . cotisée: 2840
protection sociale . retraite . complémentaire . points acquis: 105
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate comparateur-statuts > profession libérale non reglementée 1`] = `
"dirigeant . rémunération . net: 29520
dirigeant . rémunération . net . après impôt: 24536
entreprise . coût formalités . création: 0
protection sociale . invalidité et décès . accidents du travail et maladies professionnelles . rente décès: null
protection sociale . invalidité et décès . accidents du travail et maladies professionnelles . rente incapacité: null
protection sociale . invalidité et décès . capital décès: 9612
protection sociale . invalidité et décès . capital décès . orphelin: 200
protection sociale . invalidité et décès . pension de reversion: 891
protection sociale . invalidité et décès . pension invalidité . invalidité partielle: 990
protection sociale . invalidité et décès . pension invalidité . invalidité totale: 1650
protection sociale . maladie . accidents du travail et maladies professionnelles . indemmnités: null
protection sociale . maladie . accidents du travail et maladies professionnelles . indemmnités . à partir du 29ème jour: null
protection sociale . maladie . arrêt maladie: 54
protection sociale . maladie . maternité paternité adoption: 66
protection sociale . maladie . maternité paternité adoption . allocation forfaitaire de repos adoption: 2003
protection sociale . maladie . maternité paternité adoption . allocation forfaitaire de repos maternel: 4005
protection sociale . retraite . base . cotisée: 39600
protection sociale . retraite . complémentaire . points acquis: 148
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate comparateur-statuts > profession libérale non reglementée 2`] = `
"dirigeant . rémunération . net: 30999
dirigeant . rémunération . net . après impôt: 28230
entreprise . coût formalités . création: 0
protection sociale . invalidité et décès . accidents du travail et maladies professionnelles . rente décès: null
protection sociale . invalidité et décès . accidents du travail et maladies professionnelles . rente incapacité: null
protection sociale . invalidité et décès . capital décès: 9612
protection sociale . invalidité et décès . capital décès . orphelin: 200
protection sociale . invalidité et décès . pension de reversion: 725
protection sociale . invalidité et décès . pension invalidité . invalidité partielle: 805
protection sociale . invalidité et décès . pension invalidité . invalidité totale: 1342
protection sociale . maladie . accidents du travail et maladies professionnelles . indemmnités: null
protection sociale . maladie . accidents du travail et maladies professionnelles . indemmnités . à partir du 29ème jour: null
protection sociale . maladie . arrêt maladie: 44
protection sociale . maladie . maternité paternité adoption: 66
protection sociale . maladie . maternité paternité adoption . allocation forfaitaire de repos adoption: 2003
protection sociale . maladie . maternité paternité adoption . allocation forfaitaire de repos maternel: 4005
protection sociale . retraite . base . cotisée: 32220
protection sociale . retraite . complémentaire . points acquis: 104
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate comparateur-statuts > profession libérale non reglementée 3`] = `
"dirigeant . rémunération . net: 24975
dirigeant . rémunération . net . après impôt: 23897
entreprise . coût formalités . création: 191
protection sociale . invalidité et décès . accidents du travail et maladies professionnelles . rente décès: 1065
protection sociale . invalidité et décès . accidents du travail et maladies professionnelles . rente incapacité: 665
protection sociale . invalidité et décès . capital décès: 3681
protection sociale . invalidité et décès . capital décès . orphelin: null
protection sociale . invalidité et décès . pension de reversion: 719
protection sociale . invalidité et décès . pension invalidité . invalidité partielle: 799
protection sociale . invalidité et décès . pension invalidité . invalidité totale: 1331
protection sociale . maladie . accidents du travail et maladies professionnelles . indemmnités: 41
protection sociale . maladie . accidents du travail et maladies professionnelles . indemmnités . à partir du 29ème jour: 55
protection sociale . maladie . arrêt maladie: 42
protection sociale . maladie . maternité paternité adoption: 69
protection sociale . maladie . maternité paternité adoption . allocation forfaitaire de repos adoption: null
protection sociale . maladie . maternité paternité adoption . allocation forfaitaire de repos maternel: null
protection sociale . retraite . base . cotisée: 2662
protection sociale . retraite . complémentaire . points acquis: 98
protection sociale . retraite . trimestres: 4"
`;
